# object-detection

./: .gitignore  client.ipynb  pyproject.toml  server.ipynb
